# seflysend

./: .clang-format  .gitignore  CMakeLists.txt
core/src/: main.cpp
core/src/login/sign/: sign.cpp
core/src/login/sign_up/: signUp.cpp  signUp.h
gui/build-Debug/: Makefile  moc_widget.cpp  theme-v1
gui/theme-v1/: main.cpp  widget.cpp  widget.h
gui/theme.v0.1/: CMakeLists.txt  main.cpp
gui/theme.v0.1/fonts/Eurofurence/: Eurofurence.qml
gui/theme.v0.1/qml/components/: CMakeLists.txt
gui/theme.v0.1/qml/components/Input/: Input.qml
gui/theme.v0.1/qml/components/NextButton/: NextButton.qml
gui/theme.v0.1/qml/modules/Sign/: CMakeLists.txt  SignIn.qml  SignUp.qml
gui/theme.v0.1/qml/modules/Sign/src/: CMakeLists.txt  linkCppQmlModSign.cpp  linkCppQmlModSign.h
gui/theme.v0.1/qml/modules/Sign/src/LinkCppQml/: CMakeLists.txt  linkerModSign.cpp  linkerModSign.h
gui/theme.v0.1/qml/modules/Sign/src/SendInputData/: main.cpp  main.h
gui/theme.v0.1/qml/modules/Sign/src/interfaceSign/: interfaceSign.cpp  interfaceSign.h
gui/theme.v0.1/qml/modules/Sign/src/submitSignIn/: submitSignIn.cpp  submitSignIn.h
gui/theme.v0.1/qml/modules/Sign/src/submitSignUp/: submitSignUp.cpp  submitSignUp.h
gui/theme.v0.1/qml/modules/src/LinkQmlCppAllMod/: CMakeLists.txt  linkerAllMod.cpp  linkerAllMod.h
gui/theme.v0.1/scr/: CMakeLists.txt  Main.qml  main.cpp
gui/theme.v0.1/scr/components/: CMakeLists.txt
gui/theme.v0.1/scr/fonts/Eurofurence/: CMakeLists.txt
gui/theme.v0.1/scr/modules/Sign/: CMakeLists.txt  SignIn.qml  SignUp.qml
gui/theme.v0.1/scr/modules/Sign/Input/: Input.qml
gui/theme.v0.1/scr/modules/Sign/NextButton/: NextButton.qml
server/src/: main.cpp
sign/: sign.cpp  sign.h
signin/: main.cpp
signup/: main.cpp
src/: main.cpp
src/login/sign/: sign.cpp  sign.h
src/login/sign_in/: signIn.cpp  signIn.h
src/login/sign_up/: signUp.cpp  signUp.h
